clang/test/Ripple/external-ripple-lib/wrong-signature-shapes-arm64.c
// NOTE: Assertions have been autogenerated by utils/update_cc_test_checks.py UTC_ARGS: --version 6
// REQUIRES: aarch64-registered-target
// RUN: %clang -ffreestanding --target=aarch64-unknown-linux-gnu -DCOMPILE_LIB -c -O2 -emit-llvm %s -o %t.rlib.bc
// RUN: %clang -ffreestanding --target=aarch64-unknown-linux-gnu -O2 -fenable-ripple -emit-llvm -S -o %t -fripple-lib %t.rlib.bc -mllvm -ripple-disable-link %s 2>%t.err; FileCheck %s --input-file=%t.err

#ifdef COMPILE_LIB

typedef float v4f32 __attribute__((vector_size(16))) __attribute__((aligned(16)));
typedef float v16f32 __attribute__((vector_size(64))) __attribute__((aligned(16)));
typedef float v256f32 __attribute__((vector_size(1024))) __attribute__((aligned(16)));

extern v256f32 ripple_ret_t16x16f32_t1x16f32_t16f32_externf(v4f32 A, v16f32 B, v4f32 C) { v256f32 v = {8.f, 1.f}; return v; }
extern v4f32 ripple_ret_t16x16f32_t1x16f32_t16f32_externf2(v4f32 A, v16f32 B, v4f32 C) { return A + C; }

#else

#include <ripple.h>

#define TILE_SIZE 16

// CHECK: error: the external ripple function 'ripple_ret_t16x16f32_t1x16f32_t16f32_externf' argument at index 0 tensor shape 't1x16f32' is incompatible with the declared argument vector type of size 4
// CHECK: error: the external ripple function 'ripple_ret_t16x16f32_t1x16f32_t16f32_externf2' return tensor shape 't16x16f32' is incompatible with the declared return vector type of size 4
extern float externf(float, float, float);
extern float externf2(float, float, float);

void test(float *restrict A, float *restrict B, float *restrict C) {
  ripple_block_t BS = ripple_set_block_shape(0, TILE_SIZE, TILE_SIZE);
  size_t v0 = ripple_id(BS, 0);
  size_t v1 = ripple_id(BS, 1);
  size_t v2 = v0 + ripple_get_block_size(BS, 0) * v1;
  C[v2] = externf(A[v1], B[v0], A[v1]);
  C[v2] = externf2(A[v1], B[v0], A[v1]);
}

#endif
